# active-window

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix
.github/workflows/: ci.yml  update-flake.yml
src/: main.rs
