[package]
name = "active-window"
version = "0.1.1"
edition = "2021"
description = "Prints the currently active Wayland window title to stdout"
license = "MIT"
authors = ["Jason"]
repository = "https://github.com/adventurejason-code/active-window"
keywords = ["wayland", "window", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "active-window"
path = "src/main.rs"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[profile.release]
strip = true
opt-level = 3
